<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/custo_do_servico"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/custo_do_servico"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/atendimento_cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/como_foi_seu_atendimento"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custo_do_servico" />

    <RadioGroup
        android:id="@+id/atendimento_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/atendimento_incrivel"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/atendimento_cliente">

        <RadioButton
            android:id="@+id/atendimento_incrivel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incrivel_20" />

        <RadioButton
            android:id="@+id/atendimento_bom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bom_15" />

        <RadioButton
            android:id="@+id/atendimento_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_10" />
    </RadioGroup>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/arredondar_gorjeta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/arredondar_a_gorjeta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/atendimento_radio_group"
        app:layout_constraintTop_toBottomOf="@id/atendimento_radio_group" />

    <Button
        android:id="@+id/botao_calcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arredondar_gorjeta" />

    <TextView
        android:id="@+id/resultado_texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Resultado: $10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/botao_calcular" />


</androidx.constraintlayout.widget.ConstraintLayout>